Sat Jun 26 10:08:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb (EnvUtil#invoke_ruby): no needs to copy the
	  original ENV, since it's done in spawn automatically.
	  [ruby-dev:41733]

Fri Jun 25 10:07:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb (Test::Unit::Assertions#assert_in_out_err):
	  return the exit status.

	* test/ruby/envutil.rb (EnvUtil#invoke_ruby): change the
	  environment of spawned process only.

	* test/ruby/envutil.rb (EnvUtil#invoke_ruby): get rid of possible
	  deadlock.

Wed Jun 23 23:49:21 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (str_is_number): renamed from str_isnumber to
	  avoid confusion to str_isnumber in ext/socket/getaddrinfo.c.

Wed Jun 23 21:32:08 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (reg_get_typelib_file_path): try win64
	  registry entry at first. [ruby-dev:41674] [Bug #3464]

Thu Jul  1 04:21:10 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c: don't use __P.

Wed Jun 30 07:29:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_rubyoptions.rb (test_script_from_stdin): by using
	  a pipe, get rid of not-well-defined behavior after the child
	  process terminated in pty.

Wed Jun 30 02:37:30 2010  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* thread_pthread.c (get_stack): use pthread_getthrds_np() for AIX.

	* configure.in: ditto.

Wed Jun 23 21:17:32 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (ruby_getaddrinfo__darwin): new workaround for
	  getaddrinfo problem on Mac OS X Snow Leopard.  [ruby-core:29427]
	  patch by Wataru Kimura.  [ruby-core:30842]

Wed Jun 23 06:44:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (fchown): need to check.  a patch by Eric Wong
	  at [ruby-core:30818].

	* io.c (argf_next_argv): check for setting owner/group.

Tue Jun 22 21:33:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
